Nova/src/main/java/com/example/ProjectNova/Nova/Errors/AuthenticationException.java
package com.example.ProjectNova.Nova.Errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(code = HttpStatus.UNAUTHORIZED, reason = "The password or username entered is incorrect")
public class AuthenticationException extends Exception {

}
